Issue #10778: decoding_fgets() decodes the filename from the filesystem encoding instead of UTF-8.